Fixed scrollbar

--- a/apps/shiptech/src/styles.scss
+++ b/apps/shiptech/src/styles.scss
@@ -30,15 +30,15 @@
     }
 }
 
-::-webkit-scrollbar {
-    width: 4px;
-    height: 4px;
-    background-color: transparent;
-}
+// ::-webkit-scrollbar {
+//     width: 4px;
+//     height: 4px;
+//     background-color: transparent;
+// }
   
-ag-grid-angular {
-    ::-webkit-scrollbar {
-      width: 10px;
-      height: 10px;
-    }
-}
+// ag-grid-angular {
+//     ::-webkit-scrollbar {
+//       width: 10px;
+//       height: 10px;
+//     }
+// }
